Fix/7752 qamy orcid fix position of visibility tooltip (#1318)
* style: Fix visibility tooltip alignment inside modals

* 🤖 GITHUB ACTIONS: formatting 🤖

* style: Add bottom visibility tooltip alignment

* fix: remove todo comment

--- a/src/app/cdk/privacy-selector/privacy-selector/privacy-selector.component.scss
+++ b/src/app/cdk/privacy-selector/privacy-selector/privacy-selector.component.scss
@@ -43,6 +43,17 @@ button {
   }
 }
 
+.privacy-selector.start {
+  left: unset;
+  margin: unset;
+}
+
+.privacy-selector.bottom {
+  bottom: unset;
+  left: unset;
+  margin: unset;
+}
+
 .panel:hover + .hide {
   display: block;
 }
